force-app/main/default/objects/Device_Training__c/Device_Training__c.object-meta.xml
<CustomObject>
    <label>Device Training</label>
    <nameField>
        <displayFormat>DT-{00000}</displayFormat>
        <label>Device Training ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Device Trainings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>