force-app/main/default/objects/Device_Training__c/fields/Candidate_Attestation__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Attestation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the provider has self-attested to completing the required training.</description>
    <label>Candidate Attestation</label>
    <type>Checkbox</type>
</CustomField>