force-app/main/default/objects/Device_Training__c/fields/Competency_Assessed__c.field-meta.xml
<CustomField>
    <fullName>Competency_Assessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a formal competency assessment was completed as part of the training.</description>
    <label>Competency Assessed</label>
    <type>Checkbox</type>
</CustomField>