force-app/main/default/objects/Device_Training__c/fields/Device_Name__c.field-meta.xml
<CustomField>
    <fullName>Device_Name__c</fullName>
    <description>The specific medical device or equipment type (e.g., &apos;Siemens MRI Model X&apos;).</description>
    <label>Device Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anesthesia Machine</fullName>
            </value>
            <value>
                <fullName>CPR/BLS Equipment</fullName>
            </value>
            <value>
                <fullName>CT Scan</fullName>
            </value>
            <value>
                <fullName>Defibrillator</fullName>
            </value>
            <value>
                <fullName>Dialysis Machine</fullName>
            </value>
            <value>
                <fullName>ECG Machine</fullName>
            </value>
            <value>
                <fullName>EMR System</fullName>
            </value>
            <value>
                <fullName>Glucometer</fullName>
            </value>
            <value>
                <fullName>Infusion Pump</fullName>
            </value>
            <value>
                <fullName>Laparoscopic Equipment</fullName>
            </value>
            <value>
                <fullName>MRI</fullName>
            </value>
            <value>
                <fullName>Nebulizer</fullName>
            </value>
            <value>
                <fullName>Oxygen Therapy Equipment</fullName>
            </value>
            <value>
                <fullName>pacemaker</fullName>
            </value>
            <value>
                <fullName>Patient Monitor</fullName>
            </value>
            <value>
                <fullName>Pulse Oximeter</fullName>
            </value>
            <value>
                <fullName>Suction Apparatus</fullName>
            </value>
            <value>
                <fullName>Syringe Pump</fullName>
            </value>
            <value>
                <fullName>Ultrasound Machine</fullName>
            </value>
            <value>
                <fullName>Ventilator</fullName>
            </value>
            <value>
                <fullName>X-Ray</fullName>
            </value>
            <value>
                <fullName>X-Ray Machine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>