force-app/main/default/objects/Device_Training__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>The date the training or certification expires.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>