force-app/main/default/objects/Device_Training__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <description>The device manufacturer (e.g., &apos;GE Healthcare&apos;, &apos;Philips&apos;, &apos;Siemens&apos;).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Manufacturer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>