force-app/main/default/objects/Device_Training__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Device Trainings</relationshipLabel>
    <relationshipName>Device_Trainings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>