force-app/main/default/objects/Device_Training__c/fields/Required_Training_Modules__c.field-meta.xml
<CustomField>
    <fullName>Required_Training_Modules__c</fullName>
    <description>A list or description of the specific modules, courses, or competencies required for this device training.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Required Training Modules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>