force-app/main/default/objects/Device_Training__c/fields/Training_completed__c.field-meta.xml
<CustomField>
    <fullName>Training_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training completed</label>
    <type>Checkbox</type>
</CustomField>